<resources>
    <string name="app_name">RideLink Dashboard</string>

    <string name="disconnected">Disconnected</string>
    <string name="socket_status">SOCKET STATUS</string>
    <string name="tachometer">TACHOMETER</string>
    <string name="int_man_p">INT-MAN.P.</string>
    <string name="performance">PERFORMANCE</string>
    <string name="air_flow_rate">AIR FLOW RATE</string>
    <string name="psi">psi</string>
    <string name="gr_s">gr/s</string>
    <string name="bar">bar</string>
    <string name="vin">VIN</string>
    <string name="count_vin">JH2PC35051M20020</string>
    <string name="count_data">%1$s</string>
    <string name="throtle">Throtle</string>
    <string name="eng_load">Eng.Load</string>
    <string name="speed">SPEED</string>
    <string name="km_h">km/h</string>
    <string name="gear">GEAR</string>
    <string name="x1_000_rpm">x1.000 rpm</string>
</resources>
